--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~bootstrap/scss/bootstrap.scss";
+
+html, body,app-root {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.site{
+  width: 100%;
+  height: 100%;
+}
+.full-width {
+  width: 100%;
+}
+
+.flex-fill-remaining-space {
+  flex: 1 1 auto;
+}
+
+.margin-top-site {
+  margin-top: 64px;
+  @media (max-width: 599px) {
+    margin-top: 56px;
+  }
+}
