--- a/src/app/main/main-home/main-home.component.html
+++ b/src/app/main/main-home/main-home.component.html
@@ -1,3 +1,5 @@
-<p>
-  main-home works!
+<p class="test">
+  <span>我是主页</span>
+  <!--<mat-icon svgIcon="banner"></mat-icon>-->
+  <mat-icon svgIcon="week"></mat-icon>
 </p>
