--- a/src/app/base/footer/footer.component.html
+++ b/src/app/base/footer/footer.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar color="primary">
-  <span class="fill-remaining-space"></span>
+  <span class="flex-fill-remaining-space"></span>
   <span>&copy; By Rick</span>
-  <span class="fill-remaining-space"></span>
-  <span class="fill-remaining-space"></span>
+  <mat-icon svgIcon="banner"></mat-icon>
+  <span class="flex-fill-remaining-space"></span>
+  <mat-icon svgIcon="week"></mat-icon>
+  <span class="flex-fill-remaining-space"></span>
 </mat-toolbar>
