--- a/src/app/base/footer/footer.component.scss
+++ b/src/app/base/footer/footer.component.scss
@@ -1,3 +1,3 @@
 mat-toolbar {
-  background: url("../../../assets/svg/bg/banner.svg");
+  //background: url("../../../assets/svg/bg/banner.svg");
 }
