--- a/src/app/main/cob/cob.component.html
+++ b/src/app/main/cob/cob.component.html
@@ -1,3 +1,14 @@
-<p>
-  cob works!
-</p>
+<ol type="1">
+  <li>我是cob</li>
+  <li>我是cob</li>
+  <li>我是cob</li>
+  <li>我是cob</li>
+  <li>我是cob</li>
+  <li>我是cob</li>
+  <li>我是cob</li>
+  <li>我是cob</li>
+  <li>我是cob</li>
+  <li>我是cob</li>
+  <li>我是cob</li>
+  <li>我是cob</li>
+</ol>
