--- a/src/app/main/main-blog/main-blog.component.html
+++ b/src/app/main/main-blog/main-blog.component.html
@@ -1,41 +1,26 @@
-<mat-sidenav-container>
-  <mat-sidenav  class="sidnav position-fixed margin-top-site" #sidenva mode="side"
-                [opened]="sidenavOpened">
-    <app-sidenav-menu></app-sidenav-menu>
-  </mat-sidenav>
-  <mat-sidenav-content class="mat-small-test">
-    <h3>sidenav-content</h3>
-    <button mat-button="" (click)="onClick()">测试我</button>
-    <ul>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-      <li>5</li>
-      <li>6</li>
-      <li>7</li>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-      <li>5</li>
-      <li>6</li>
-      <li>7</li>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-      <li>5</li>
-      <li>6</li>
-      <li>7</li>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-      <li>5</li>
-      <li>6</li>
-      <li>7</li>
-
-    </ul>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<ol type="I">
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+  <li>我是主要内容</li>
+</ol>
