--- a/src/app/main/main-home/main-home.component.scss
+++ b/src/app/main/main-home/main-home.component.scss
@@ -1,4 +1,5 @@
-p.test {
-  height: 100%;
-  background: url("../../../assets/svg/bg/banner.svg") no-repeat right top;
-}
+//p.test {
+//  height: 100%;
+//  background: url("../../../assets/svg/bg/banner.svg") no-repeat right top;
+//  background-size: 100% 100%;
+//}
