--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,8 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~bootstrap/scss/bootstrap.scss";
 
-html, body,app-root {
+html, body {
+  padding: 0;
   margin: 0;
   width: 100%;
   height: 100%;
@@ -15,7 +16,9 @@ html, body,app-root {
 .full-width {
   width: 100%;
 }
-
+.full-height {
+  height: 100%;
+}
 .flex-fill-remaining-space {
   flex: 1 1 auto;
 }
