add projects page

--- a/src/app/base/header/header.component.html
+++ b/src/app/base/header/header.component.html
@@ -7,8 +7,8 @@
   <!--定义三个主要区域的路由-->
   <button class="mat-button mat-button-resizeable" mat-button="" (click)="onClickHome({id:'home'})" [routerLink]="['/home']">HOME</button>
   <button class="mat-button mat-button-resizeable" mat-button="" (click)="onClickBolg({id:'blog'})" [routerLink]="['/blog']">BLOG</button>
+  <button class="mat-button mat-button-resizeable mat-button-big" mat-button="" (click)="onClickProjects({id:'projects'})" [routerLink]="['/projects']">PROJECTS</button>
   <button class="mat-button mat-button-resizeable" mat-button="" (click)="onClickAbout({id:'about'})" routerLink="/about">ABOUT</button>
-  <button class="mat-button mat-button-resizeable" mat-button="" (click)="onTest({id:'test'})">Test</button>
   <!--增加这个span主要是将剩余空间填满，而使模式开关居右。-->
   <!--原理：mat-toolbar是个flex-container，它里面的flex-item不指定flex默认值的时候是flex: 0 1 auto-->
   <!--只有这个span的flex: 1 1 auto，所以剩余的空间都被这个item瓜分-->
