--- a/src/app/base/header/header.component.scss
+++ b/src/app/base/header/header.component.scss
@@ -8,3 +8,6 @@ mat-toolbar button.mat-button-resizeable {
 .mat-button-stretch {
   align-self: stretch;
 }
+mat-toolbar button.mat-button-big{
+  width: 118px;
+}
