--- a/src/app/main/main-about/main-about.component.html
+++ b/src/app/main/main-about/main-about.component.html
@@ -2,11 +2,29 @@
 <h2>Qualifications</h2>
 <div>
   <ul>
-    <li>Over 16-year experience in software engineering and professional knowledge of software development activities such as requirement analysis, design/prototype, coding/programming, review, test/validation, releases and software maintenance. Absolutely understanding of software development processes of Agile/Scrum/CMMI and software management such as configuration management, iterations, and version control as well as project management.</li>
-    <li>Solid programming skill in Javascript/ECMAScript/ES6/Typescript, Html5/CSS3 and libraries/frameworks such as Angular, Bootstrap, jQuery, RxJS as well as C, C++ and Java. Know well about Html tags, CSS layout, properties, layout, selectors, DOM, BOM, event, AJAX, Async, observable, JSON and Http.</li>
-    <li>Skilled developer in IT area: Web/front-end, Android apps, Linux, frameworks and automotive electronics by utilizing variety of IDEs and supporting tools such as Webstorm, Postman, Git/Github, Webpack, npm, Angular CLI, Chrome, Firefox, Edge, Photoshop, Eclipse, Android studio, NetBeans, QT, SVN, and QAC based on Object Oriented or Process Oriented Programming</li>
-    <li>Comprehensive knowledge in automotive industry such as embedded system, QNX, µC/OS-II, CAN/GMLAN, LIN, FlexRay, MOST, OSEK/AutoSAR, TS16949, I2C, I2S, SPI, UART, SDIO, GPIO, HMI, tuner, navigation, audio, video, media, DSP, DVD, BT, Wi-Fi, telematics, Diagnosis, KW2000, UDS, XCP, Monitoring, Cruise control, Idle control, Ignition and Injection, Knocking control, Miss fire, OBDII/EOBD, IMMO, SVPWM control</li>
-    <li>Professional knowledge of products development whole lifecycle starting with RFIs/RFQs, requirement analysis, customer specifications, system/product design, architecture, EBOM/MBOM optimize, Gerber, validation, trouble shooting and ending with SMT, DV/PVs, field tests, project releases</li>
+    <li>Over 16-year experience in software engineering and professional knowledge of software development activities
+      such as requirement analysis, design/prototype, coding/programming, review, test/validation, releases and software
+      maintenance. Absolutely understanding of software development processes of Agile/Scrum/CMMI and software
+      management such as configuration management, iterations, and version control as well as project management.
+    </li>
+    <li>Solid programming skill in Javascript/ECMAScript/ES6/Typescript, Html5/CSS3 and libraries/frameworks such as
+      Angular, Bootstrap, jQuery, RxJS as well as C, C++ and Java. Know well about Html tags, CSS layout, properties,
+      layout, selectors, DOM, BOM, event, AJAX, Async, observable, JSON and Http.
+    </li>
+    <li>Skilled developer in IT area: Web/front-end, Android apps, Linux, frameworks and automotive electronics by
+      utilizing variety of IDEs and supporting tools such as Webstorm, Postman, Git/Github, Webpack, npm, Angular CLI,
+      Chrome, Firefox, Edge, Photoshop, Eclipse, Android studio, NetBeans, QT, SVN, and QAC based on Object Oriented or
+      Process Oriented Programming
+    </li>
+    <li>Comprehensive knowledge in automotive industry such as embedded system, QNX, µC/OS-II, CAN/GMLAN, LIN, FlexRay,
+      MOST, OSEK/AutoSAR, TS16949, I2C, I2S, SPI, UART, SDIO, GPIO, HMI, tuner, navigation, audio, video, media, DSP,
+      DVD, BT, Wi-Fi, telematics, Diagnosis, KW2000, UDS, XCP, Monitoring, Cruise control, Idle control, Ignition and
+      Injection, Knocking control, Miss fire, OBDII/EOBD, IMMO, SVPWM control
+    </li>
+    <li>Professional knowledge of products development whole lifecycle starting with RFIs/RFQs, requirement analysis,
+      customer specifications, system/product design, architecture, EBOM/MBOM optimize, Gerber, validation, trouble
+      shooting and ending with SMT, DV/PVs, field tests, project releases
+    </li>
   </ul>
 </div>
 <h2>Professional Experience</h2>
@@ -14,32 +32,202 @@
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Personal data
+        Freelancer
       </mat-panel-title>
       <mat-panel-description>
-        Type your name and age
+        2016 - 2018
       </mat-panel-description>
     </mat-expansion-panel-header>
 
-    <mat-form-field>
-      <input matInput placeholder="First name">
-    </mat-form-field>
-
-    <mat-form-field>
-      <input matInput placeholder="Age">
-    </mat-form-field>
+    <div>
+      <ul>
+        <li>Finished the front end project of lottery from friend using Html, CSS, Angular, Angular Material,
+          Typescript, RxJS, Webstorm, Chrome, Firefox, and Edge.
+        </li>
+        <li>Summarized and systematized Java, Javascript, CSS3, Html5, C, and C++ from the former projects/professional
+          books/online video tutorials/open source communities by review/reading documents and source codes.
+        </li>
+        <li>Self-learning continuously about the latest technology in Java, Javascript, Android, and Web/Front-end
+          development, Autonomous, and V2X to keep the knowledge updated.
+        </li>
+        <li>Catalogued and sorted in order for the documents/codes from the former projects with MS office suite (Excel,
+          Word, PowerPoint, Project, Outlook and Access).
+        </li>
+      </ul>
+    </div>
   </mat-expansion-panel>
   <mat-expansion-panel (opened)="panelOpenState = true"
                        (closed)="panelOpenState = false">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Self aware panel
+        Senior software engineer, HSAE
       </mat-panel-title>
       <mat-panel-description>
-        Currently I am {{panelOpenState ? 'open' : 'closed'}}
+        2015 - 2016
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <p>I'm visible because I am open</p>
+    <div>
+      <ul>
+        <li>Designed and developed responsive web applications using Html, CSS, Bootstrap, Angular, Webstorm,
+          Typescript/Javascript, RxJS, Chrome, Firefox, Edge, and Photoshop.
+        </li>
+        <li>Conducted the test/validation and optimized the code for the web applications using browsers and VMware
+          Workstation to improve the compatibility for cross browser as well as cross operating system.
+        </li>
+        <li>Developed and tested android apps/applications for mobiles/tablets to monitor the status of the vehicle
+          using android Activity/Service/Content Provider/Broadcast Receiver, Java, and Android Studio.
+        </li>
+        <li>Programmed vehicle recorder software based on RTOS (Real-time Operating System for Embedded) and related
+          international automotive standards using C, NXP IDE.
+        </li>
+        <li>Tested software in open-loop/close-loop using testing tools such as oscilloscope, test bench, I2C tracer,
+          CANoe.
+        </li>
+        <li>Developed, maintained and controlled software development project plans, schedules, budgets and forecasts,
+          in order to optimize engineering activities, and deliver projects on time/on specification and within budget.
+        </li>
+        <li>Reviewed the design documents/codes internally to make sure the high quality, efficiency, less bugs of these
+          codes.
+        </li>
+        <li>Defined and wrote software engineering related working instructions/technical training documents/project
+          management documents based on development processes and trained junior engineers.
+        </li>
+        <li>Tracked product resource usage of RAM, Flash using self-developed Java tool to optimize the code.</li>
+      </ul>
+    </div>
+    <div>
+      <p>Projects</p>
+      <ul>
+        <li>Project Management System:<br>
+          Functions: Login and personal information, project plan for budget, resources and the timing, plan tracking
+          and update, record effort for projects, task list: new, update, delete, drag/drop for projects/tasks etc…<br>
+          Environment: Html, CSS, Typescript, Bootstrap, Angular, SASS, RxJS, Webpack, Webstorm, Chrome, Firefox, Git,
+          VMware workstation, agile.
+        </li>
+        <li>Driver’s secretary (android app):<br>
+          Functions: Display the vehicle speed, engine speed, fuel consumption, location, warning, and windows/seat
+          control.<br>
+          Environment: Java, android studio, mobiles, vehicle recorder, test bench, CANoe, Git, agile.
+        </li>
+      </ul>
+    </div>
+  </mat-expansion-panel>
+  <mat-expansion-panel (opened)="panelOpenState = true"
+                       (closed)="panelOpenState = false">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Senior software engineer, YFVE
+      </mat-panel-title>
+      <mat-panel-description>
+        2011 - 2015
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <div>
+      <ul>
+        <li>Designed and developed interactive web applications using Html, CSS, Javascript, Bootstrap, jQuery,
+          Webstorm, Gulp, Chrome, Firefox, and Photoshop under agile process.
+        </li>
+        <li>Designed and programmed the automotive infotainment system based on customer requirements using C, C++, QT
+          and VMware workstation on Linux.
+        </li>
+        <li>Coordinated and cooperated with global development team for the global projects to establish, maintain and
+          track the RASIC chart.
+        </li>
+        <li>Tested software in open-loop/close-loop using testing tools such CANoe, test bench, I2C tracers,
+          oscilloscopes as well as VMware Workstation to verify the function of these codes and improve the
+          compatibility for cross browser as well as cross operating system.
+        </li>
+        <li>Reviewed the design documents/codes internally to make sure the high quality, efficiency, less bugs of these
+          codes.
+        </li>
+        <li>Organized and leaded iterative ceremonies such as product backlog planning, daily stand-up meetings,
+          reviews, retrospectives, iteration and release planning, demos and other scrum meetings.
+        </li>
+        <li>Defined and wrote software engineering related working instructions/technical training documents/project
+          management documents based on development processes and trained junior engineers.
+        </li>
+      </ul>
+    </div>
+    <div>
+      <p>Projects</p>
+      <ul>
+        <li>Online training system<br>
+          Functions: User login and profiles, favorites, search, training catalogue, training details, rating and
+          comments, online test, blogs etc…<br>
+          Environment: Html, CSS, Javascript, Bootstrap, jQuery, Gulp, Webstorm, Chrome, Firefox, Git, VMware, agile.
+        </li>
+        <li>Workflow:<br>
+          Functions: User log in, new workflow, email reminding, agree/assign/reject workflow, check opened tasks and
+          history etc…<br>
+          Environment: Html, CSS, Javascript, Bootstrap, jQuery, Gulp, Webstorm, Chrome, Firefox, Git, and VMware.
+        </li>
+        <li>Vehicle infotainments system<br>
+          Functions: AM/FM, audio/video playback, Bluetooth/hand-free, Wifi, SD/USB, Navigation, etc…<br>
+          Environment: C/C++, Linux, Qt, demo-board, CANoe, VMware, mobile, Git, agile
+        </li>
+      </ul>
+    </div>
+  </mat-expansion-panel>
+  <mat-expansion-panel (opened)="panelOpenState = true"
+                       (closed)="panelOpenState = false">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Software engineer, UAES
+      </mat-panel-title>
+      <mat-panel-description>
+        2002 - 2011
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <div>
+      <ul>
+        <li>Developed high quality C code in real time embedded operating system by using Codewright to meet the
+          requirement from sales department team based on the coding standard of Bosch.
+        </li>
+        <li>Designed and executed unit test with debug-card, UDE, MS word, MS excel, test benches and oscilloscopes.
+        </li>
+        <li>Reviewed and checked C code by using QAC based on the standard Bosch product development process.
+        </li>
+        <li>Calculated and tracked the CPU resource (RAM, non-volatile RAM, Code flash, Data flash, Run-time) using
+          self-developed Java tool and the output files from the complier as well as the Labcar.
+        </li>
+        <li>Created and maintained training catalogue of software engineer that covered most of the software development
+          activities such as coding, debugging, software release, integrating, software configuration management (SCM),
+          version control, test and validation, making project configuration, archiving documentations.
+        </li>
+        <li>Defined and wrote software development procedures, processes and working instructions to meet the waterfall
+          development process CMMI while trained engineers and promoted them to application.
+        </li>
+        <li>Modeled and simulated specific requirements which were not exist in platform using Matlab/Ascet.</li>
+        <li>Controlled software version and change history by using PVCS/SVN.</li>
+        <li>Maintained software development environment and developed internal tools to improve efficiency using
+          VB/Java.
+        </li>
+        <li>Configured the pins of CPU to make the pins serve as different functions on request of projects/customers.
+        </li>
+        <li>Released software HEX files to project manager and the plant after the full test with Inca/Labcar with
+          workflow.
+        </li>
+        <li>Coordinated with global team for projects work split, development process synchronization, documents and
+          source code transfer, technical training, and leaded platforms transfer from global to local.
+        </li>
+        <li>Recorded and tracked problems, issues and the bugs with Jira.</li>
+        <li>Managed the customer requirements with Doors.</li>
+        <li>Reported the projects status such as budget, schedule, issues, changes, risks and mitigation plans as well
+          as the status of junior engineers inside the team regularly to software manager.
+        </li>
+      </ul>
+    </div>
+    <div>
+      <p>Projects</p>
+      <ul>
+        <li>Engine management system and electronic motor management system<br>
+          Functions: Torque control, Cruise control, Idle control, Ignition and Injection, Knocking control, Miss fire,
+          OBDII/EOBD, IMMO, SVPWM control etc…<br>
+          Environment: C, Codewright, Matlab/Ascet, Labcar, Doors, Jira, PVCS/SVN, CMMI
+        </li>
+      </ul>
+    </div>
   </mat-expansion-panel>
 </mat-accordion>
 <h2>Education</h2>
+<p>Master, Mechanical and Electronic Engineering, SJTU</p>
