--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,9 @@
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
-  <div class="cob">
-    <app-cob></app-cob>
-  </div>
+  <!--<div class="cob">-->
+    <!--<app-cob></app-cob>-->
+  <!--</div>-->
   <footer class="footer">
     <app-footer></app-footer>
   </footer>
